fix: mobile spacing

--- a/filing/css/styles.css
+++ b/filing/css/styles.css
@@ -1025,7 +1025,7 @@ footer {
 		line-height: 24px;
 	}
 	.featured {
-		padding-top: 40px;
+		padding-top: 20px;
 		font-size: 18px;
 		line-height: 1.4em;
 	}
